<resources>
    <string name="app_name">StarWars</string>
    <string name="search_title">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birth_year">Birth year</string>
    <string name="eye_color">Eye color</string>
    <string name="gender">Gender</string>
    <string name="hair_color">Hair color</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="skin_color">Skin color</string>
    <string name="persons">Persons</string>
    <string name="person_details">Person Details</string>
</resources>
